--- a/StudentManagementSystem/Views/Teacher/Index.cshtml
+++ b/StudentManagementSystem/Views/Teacher/Index.cshtml
@@ -7,9 +7,9 @@
     <link href="~/css/student-ui.css" rel="stylesheet" />
     <link href="~/css/teacher-ui.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
-
 }
 
+<div class="teacher-page-container">
 <!-- Welcome Header with Animation -->
 <div class="welcome-header mb-4">
     <div class="d-flex justify-content-between align-items-center">
@@ -350,3 +350,4 @@ style.textContent = `
 document.head.appendChild(style);
 </script>
 }
+</div> <!-- End teacher-page-container -->
